Added support for popup trigger "chat_minimized" and refactored some code

--- a/add-ons/certainly_popups/landing_page_example.html
+++ b/add-ons/certainly_popups/landing_page_example.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="/certainly-popups/certainly-popups.css">
 
 <script>
-certainly_config = 
+var certainly_config = 
 	{
 		id: "f5ab1403-3b14-4b80-9267-11c96f90cfac",
 		webchatKey: "certainly",
