Added Siksilk and Tiger of Sweden's chat deployments, added extension for the Zendesk Widget Switch

--- a/scripts/extensions/certainly_popups/page.html
+++ b/scripts/extensions/certainly_popups/page.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="/certainly-popups/certainly-popups.css">
 
 <script>
-var certainly_config = 
+var certainly_settings = 
 	{
 		id: "f5ab1403-3b14-4b80-9267-11c96f90cfac",
 		webchatKey: "certainly",
@@ -20,5 +20,5 @@ var certainly_config =
 	}
 </script>
 
-<script src="/certainly-popups/certainly-popups-config.js"></script>
-<script src="/certainly-popups/certainly-popups.js"></script>
+<script src="/certainly_popups/certainly_popups_config.js"></script>
+<script src="/certainly_popups/certainly_popups.js"></script>
