Updated Certainly Popups & Zendesk Switch extensions

--- a/scripts/extensions/certainly_popups/page.html
+++ b/scripts/extensions/certainly_popups/page.html
@@ -4,7 +4,7 @@
 </iframe>
 
 <script src="https://app.certainly.io/sdk/webchat.js"></script>
-<link rel="stylesheet" href="/certainly-popups/certainly-popups.css">
+<link rel="stylesheet" href="src/certainly_popups.css">
 
 <script>
 var certainly_settings = 
@@ -20,5 +20,5 @@ var certainly_settings =
 	}
 </script>
 
-<script src="/certainly_popups/certainly_popups_config.js"></script>
-<script src="/certainly_popups/certainly_popups.js"></script>
+<script src="src/certainly_popups_config.js"></script>
+<script src="src/certainly_popups.js"></script>
