--- a/scripts/extensions/zendesk/zendesk_switch/page.html
+++ b/scripts/extensions/zendesk/zendesk_switch/page.html
@@ -4,6 +4,14 @@
 	<body>
 		<iframe src="https://certainly.io/customer-service" style="width:100%;height:100%;" frameBorder="0"></iframe>
 		
+		<script type="text/javascript">
+			window.zESettings = {
+				webWidget: {
+					color: { theme: '#331A70' }
+				}
+			};
+		</script>
+
 		<!--Zendesk Chat Widget Start-->
 		<script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=66dca387-9072-4c5a-8eab-8b8508fcd9a3"></script>
 		<!--Zendesk Chat Widget End-->
@@ -15,7 +23,6 @@
 		initCertainlyWidget({
 			id: "4807d5c6-7fef-4ad5-8929-9b0d5c99a6b4",
 			mode: "clear_past_conversations",
-			ref: "678549",
 			cvars: {
 				// You can pass metadata to Certainly
 			},
