Updated popups extension
Added support for visitor inactivity triggers
Fixed popups showing when widget is opened
Multiple other fixes and logic improvements

--- a/scripts/extensions/certainly_popups/page.html
+++ b/scripts/extensions/certainly_popups/page.html
@@ -1,7 +1,8 @@
 <head>
 </head>
-<iframe src="https://www.tigerofsweden.com/dk/" title="Tiger of Sweden" style="width:100vw;height:100vh;" frameBorder="0">
-</iframe>
+<!--
+	<iframe src="https://www.certainly.io/" title="Certainly" style="width:100vw;height:100vh;" frameBorder="0"></iframe>
+-->
 
 <script src="https://app.certainly.io/sdk/webchat.js"></script>
 <link rel="stylesheet" href="src/certainly_popups.css">
@@ -10,7 +11,6 @@
 var certainly_settings = 
 	{
 		id: "f5ab1403-3b14-4b80-9267-11c96f90cfac",
-		webchatKey: "certainly",
 		mode: "clear_past_conversations",
 		debuggerMode: 1,
 		debug: true,
