Added Feastables deployment and other fixes

--- a/scripts/deployments/certainly/page.html
+++ b/scripts/deployments/certainly/page.html
@@ -5,7 +5,7 @@
 <script src="https://app.certainly.io/sdk/webchat.js"></script>
 
 
-<script src="	/chat.js"></script>
+<script src="https://scripts.certainly.io/deployments/certainly/chat.js"></script>
 
 <script src="https://scripts.certainly.io/deployments/certainly/certainly_popups_config.js"></script>
 <script src="https://scripts.certainly.io/extensions/certainly_popups/certainly_popups.js"></script>
