--- a/scripts/extensions/gorgias/gorgias_switch/page.html
+++ b/scripts/extensions/gorgias/gorgias_switch/page.html
@@ -15,6 +15,7 @@
 		initCertainlyWidget({
 			id: "d56d3bcd-8d79-4311-a808-cc0ecc8dcf1a",
 			mode: "clear_past_conversations",
+			//webchatKey: 1,
 			cvars: {
 				customer_name: "John",
 				customer_email: "jd@email.com"
