Fixes on the Dixa extension

--- a/scripts/extensions/dixa/dixa_channel/page.html
+++ b/scripts/extensions/dixa/dixa_channel/page.html
@@ -22,9 +22,9 @@
 			dixa_events: {
 				takeover_module: "588630",
 				agent_joined_message: "An agent has joined the conversation",
-				bot_joined_message: "Bot has joined the conversation",
-				agent_left_message: "An agent has left the conversation",
-				bot_left_message: "Bot has left the conversation"
+				bot_joined_message: "Bot has joined the conversation ----",
+				agent_left_message: "An agent has left the conversation ----",
+				bot_left_message: "Bot has left the conversation ----"
 			}
 		}
 
@@ -34,7 +34,7 @@
 
 
 		<!--Dixa extension for Certainly Start-->
-		<script src="/src/dixa.js"></script>
+		<script src=" 	/src/dixa.js"></script>
 		<!--Dixa extension for Certainly End-->
 
 	</body>
