--- a/scripts/extensions/dixa/dixa_channel/page.html
+++ b/scripts/extensions/dixa/dixa_channel/page.html
@@ -1,12 +1,15 @@
 <html>
 	<head>
 	</head>
-	<body>
-		<!--Dixa Chat Widget Start-->
-		<script>
-		!function(e,t,a,i,d,s,n,r){e._dixa=e._dixa||function(){(e._dixa.q=e._dixa.q||[]).push(arguments),e._dixa.handler&&e._dixa.handler(arguments)},e._dixa.l=1*new Date,e._dixa.wid="011e32bb-d03b-414a-a2de-7ea8e3c0bae4",n=t.createElement(a),r=t.getElementsByTagName(a)[0],n.async=1,n.setAttribute("charset","utf-8"),n.src="https://widget.dixa.io/assets/scripts/javascript/loader.js",r.parentNode.insertBefore(n,r)}(window,document,"script")
-		</script>
-		<!--Dixa Chat Widget End-->
+	<body style="background-color: #04F404;">
+			<!--Dixa Chat Widget Start-->
+			<script>
+			!function(e,t,a,i,d,s,n,r){e._dixa=e._dixa||function(){(e._dixa.q=e._dixa.q||[]).push(arguments),
+				e._dixa.handler&&e._dixa.handler(arguments)},e._dixa.l=1*new Date,e._dixa.wid="011e32bb-d03b-414a-a2de-7ea8e3c0bae4",
+				n=t.createElement(a),r=t.getElementsByTagName(a)[0],n.async=1,n.setAttribute("charset","utf-8"),
+				n.src="https://widget.dixa.io/assets/scripts/javascript/loader.js",r.parentNode.insertBefore(n,r)}(window,document,"script")
+			</script>
+			<!--Dixa Chat Widget End-->
 
 
 		<!--Certainly Widget Start-->
@@ -22,9 +25,9 @@
 			dixa_events: {
 				takeover_module: "588630",
 				agent_joined_message: "An agent has joined the conversation",
-				bot_joined_message: "Bot has joined the conversation ----",
-				agent_left_message: "An agent has left the conversation ----",
-				bot_left_message: "Bot has left the conversation ----"
+				bot_joined_message: "Bot has joined the conversation",
+				agent_left_message: "An agent has left the conversation",
+				bot_left_message: "Bot has left the conversation"
 			}
 		}
 
