--- a/scripts/extensions/google_analytics/page.html
+++ b/scripts/extensions/google_analytics/page.html
@@ -1,24 +1,19 @@
 <html>
    <head>
       <!-- Google Analytics Script tag -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-KRZZJRNLCB"></script>
       <script>
-         (function (i, s, o, g, r, a, m) {
-         	i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-         		(i[r].q = i[r].q || []).push(arguments)
-         	}, i[r].l = 1 * new Date(); a = s.createElement(o),
-         		m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-         })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-         
-         // The first tracker will be used by the Certainly extension
-         ga('create', 'UA-85619831-3', 'auto');
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-KRZZJRNLCB');
       </script>
 
       <!-- End of Google Analytics Script tag -->
    </head>
    <body>
-      <iframe src="https://certainly.io/customer-service" style="width:100%;height:100%;" frameBorder="0"></iframe>
-      
-			<!--Certainly Widget Start-->
+      <!--Certainly Widget Start-->
       <script src="https://app.certainly.io/sdk/webchat.js"></script>
       <script>
          initCertainlyWidget({
