--- a/scripts/extensions/google_analytics/page.html
+++ b/scripts/extensions/google_analytics/page.html
@@ -1,14 +1,14 @@
 <html>
    <head>
       <!-- Google Analytics Script tag -->
-      <script async src="https://www.googletagmanager.com/gtag/js?id=G-KRZZJRNLCB"></script>
-      <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-7ESV5QCPVW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-      gtag('config', 'G-KRZZJRNLCB');
-      </script>
+  gtag('config', 'G-7ESV5QCPVW');
+</script>
 
       <!-- End of Google Analytics Script tag -->
    </head>
